scss/grid/_theme.scss
@include exports('grid/theme') {
    $grid-chrome-text: $header-text !default;
    $grid-chrome-bg: $header-bg !default;
    $grid-chrome-border: $border-color !default;
    $grid-alt-bg: rgba( contrast-wcag( $panel-bg ), .04) !default;

    $grid-selected-text: $grid-chrome-text !default;
    $grid-selected-bg: rgba($selected-bg, .25) !default;
    $grid-grouping-row-text: $text-color !default;
    $grid-grouping-row-bg: darken($bg-color, 7%) !default;
    $grid-sorted-bg: rgba( contrast-wcag( $panel-bg ), .02 ) !default;

    $tooltip-color: $accent-contrast !default;
    $tooltip-bg: $accent !default;

    .k-grid-header,
    .k-header,
    .k-grid-header-wrap,
    .k-grouping-header,
    .k-grouping-header .k-group-indicator,
    .k-grid td,
    .k-grid-footer,
    .k-grid-footer-wrap,
    .k-grid-content-locked,
    .k-grid-footer-locked,
    .k-grid-header-locked,
    .k-filter-row > th {
        border-color: $grid-chrome-border;
    }

    .k-grid-header,
    .k-grid-toolbar,
    .k-grouping-header,
    .k-grid-add-row,
    .k-grid-footer,
    .k-drag-clue {
        color: $grid-chrome-text;
        background-color: $grid-chrome-bg;
    }

    .k-group-footer td,
    .k-grouping-row td,
    tbody .k-group-cell {
        color: $grid-grouping-row-text;
        background-color: $grid-grouping-row-bg;
    }

    .k-grid-footer td,
    .k-group-footer td,
    .k-grouping-row td {
        font-weight: bold;
    }

    .k-grid {
        background-clip: padding-box;

        .k-ie11 &,
        .k-edge12 &,
        .k-edge13 & {
            background-clip: border-box;
        }

        tr.k-alt {
            background-color: $grid-alt-bg;
        }

        tr.k-state-selected,
        td.k-state-selected {
            color: inherit;
            background-color: $grid-selected-bg;
        }

        td.k-state-focused,
        th.k-state-focused {
            box-shadow: $list-item-focused-shadow;
        }

        .k-grid-filter,
        .k-header-column-menu,
        .k-hierarchy-cell .k-icon {
            border-width: 0;
            color: $grid-chrome-text;
        }

        .k-grouping-row {
            background-color: $grid-grouping-row-bg;

            .k-icon {
                color: $grid-chrome-text;
                text-decoration: none;
            }
        }

        .k-grouping-dropclue {
            &::before {
                border-color: $grid-chrome-text transparent transparent;
            }

            &::after {
                background-color: $grid-chrome-text;
            }
        }

        .k-tooltip.k-tooltip-validation {
            color: $tooltip-color;
            background-color: $tooltip-bg;

            .k-callout-n {
                border-bottom-color: $tooltip-bg;
            }

            .k-callout-e {
                border-left-color: $tooltip-bg;
            }

            .k-callout-s {
                border-top-color: $tooltip-bg;
            }

            .k-callout-w {
                border-right-color: $tooltip-bg;
            }
        }

        .k-dirty {
            border-color: currentColor transparent transparent currentColor;
        }

        &[dir = "rtl"],
        .k-rtl & {
            .k-dirty {
                border-color: currentColor currentColor transparent transparent;
            }
        }
    }

    col.k-sorted,
    th.k-sorted {
        background-color: $grid-sorted-bg;
    }

    // Grid header / footer
    .k-grid-header {

        .k-i-sort-asc-sm,
        .k-i-sort-desc-sm,
        .k-sort-order {
            color: $accent;
        }

        .k-grid-filter {}
        .k-grid-filter:hover {
            color: $button-hovered-text;
            background-color: $button-hovered-bg;
        }
        .k-grid-filter:focus {
            box-shadow: inset 0 0 0 2px rgba( 0, 0, 0, .1 );
        }
        .k-grid-filter.k-state-active {
            color: $selected-text;
            background-color: $selected-bg;
        }
    }

}

